--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
+    "opentok": "^2.6.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
