Layout testing for composed video.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "opentok": "^2.6.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "node-fs": "^0.1.7",
